--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
  font-family: "Poppins", sans-serif;
 }
 
+body {
+ background-color: var(--Off-white);
+}
+
 :root {
  font-size: 62.5%;
 
@@ -21,4 +25,135 @@
      Mobile: 375px
      Desktop: 1440px
 */
+}
+
+main {
+ position: relative;
+ margin: auto;
+ margin-top: 5rem;
+ margin-bottom: 5rem;
+
+ border-radius: 3rem 3rem 15rem 3rem;
+ padding: 6rem;
+ padding-bottom: 4rem;
+ width: 90rem;
+ background-color: var(--White);
+
+ display: flex;
+ flex-direction: column;
+}
+
+.inputs {
+ display: flex;
+ align-items: center;
+ gap: 3rem;
+
+ padding-bottom: 5rem;
+ border-bottom: 1px solid var(--Light-grey);
+}
+
+label {
+ color: var(--Smokey-grey);
+ font-size: 1.2rem;
+ letter-spacing: .2rem;
+ font-weight: 700;
+}
+
+input {
+ border: none;
+ border: 1px solid var(--Light-grey);
+ border-radius: .8rem;
+ padding: 1.2rem 2rem;
+ width: 17rem;
+
+ outline: none;
+ font-size: 3rem;
+ font-weight: 700;
+}
+
+input::placeholder {
+ opacity: .8;
+ color: var(--Smokey-grey);
+ font-size: 3.3rem;
+ font-weight: 700;
+}
+
+input:focus {
+ border-color: var(--Dark-Purple);
+}
+
+.wrapper {
+ display: flex;
+ flex-direction: column;
+ gap: 1rem;
+}
+
+.error {
+ display: none;
+}
+
+
+
+
+.results {
+ display: flex;
+ flex-direction: column;
+ gap: 1rem;
+}
+
+.result {
+ display: flex;
+ align-items: center;
+ gap: .5rem;
+}
+
+h1 {
+ font-size: 10rem;
+ font-weight: 700;
+ color: var(--Off-black);
+}
+
+span {
+ font-size: 10rem;
+ color: var(--Purple);
+ font-weight: 800;
+ letter-spacing: .2rem;
+}
+
+
+
+
+.button {
+ width: 10rem;
+ height: 10rem;
+
+ display: flex;
+ align-items: center;
+ justify-content: center;
+
+ background-color: var(--Purple);
+ border-radius: 50%;
+
+ position: absolute;
+ right: 6rem;
+ top: 16rem;
+}
+
+.button:hover {
+ background-color: var(--Off-black);
+ cursor: pointer;
+}
+
+@media (max-width:375px){
+ main {
+ border-radius: 3rem 3rem 8rem 3rem;
+ padding: 3rem;
+ padding-bottom: 3rem;
+ width: 35rem;
+ }
+
+ .inputs {
+ gap: 1.5rem;
+ padding-bottom: 2.5rem;
+ }
 }
