--- a/style.css
+++ b/style.css
@@ -144,16 +144,46 @@ span {
  cursor: pointer;
 }
 
-@media (max-width:375px){
+@media (max-width: 400px){
  main {
  border-radius: 3rem 3rem 8rem 3rem;
  padding: 3rem;
  padding-bottom: 3rem;
- width: 35rem;
+ width: 36rem;
+ align-items: center;
+
+ gap: 5rem;
  }
 
  .inputs {
- gap: 1.5rem;
- padding-bottom: 2.5rem;
+ gap: 1rem;
+ padding-bottom: 5rem;
+ }
+ input {
+ width: 10rem;
+ padding: .8rem .8rem;
+ }
+ input::placeholder {
+ font-size: 2.8rem;
+ }
+
+ h1 {
+ font-size: 5rem;
+ }
+
+ span {
+ font-size: 5rem;
+ }
+
+ .button {
+ width: 7rem;
+ height: 7rem;
+
+ left: 50%;
+ }
+
+ #btnArrow {
+ width: 3.5rem;
+ height: 3.5rem;
  }
 }
